docs: refactored markdown analysis and review of outputs

--- a/advanced/submissions/team-members/yan-cotta/week_2_feature_engineering.ipynb
+++ b/advanced/submissions/team-members/yan-cotta/week_2_feature_engineering.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "## Step 1: Foundational Data Cleaning & Preparation\n",
     "\n",
-    "Based on our Week 1 EDA findings, we need to address data quality issues and optimize data types. This step implements team feedback from Bankole regarding data type optimization and ensures data integrity for downstream processing.\n",
+    "Based on our Week 1 EDA findings, we need to address data quality issues and optimize data types. This step implements team feedback from Bankole Sumsudeen, regarding data type optimization and ensures data integrity for downstream processing. (great tip btw)\n",
     "\n",
     "### 1.1 Handle Duplicate Rows\n",
     "\n",
@@ -166,7 +166,7 @@
    "source": [
     "### 1.2 Optimize Data Types\n",
     "\n",
-    "Based on Bankole's observation, let's inspect and optimize data types for memory efficiency. **Strategic Approach:** This optimization reduces memory footprint while maintaining data integrity, which is crucial for scalable machine learning pipelines and enables more efficient neural network training. **Result:** Achieved an impressive 84.58% memory reduction (from 42.58 MB to 6.57 MB) through intelligent dtype optimization."
+    "Based on Bankole's observation, let's inspect and optimize data types for memory efficiency. **Strategic Approach:** This optimization reduces memory footprint while maintaining data integrity, which is crucial for scalable machine learning pipelines and enables more efficient neural network training (specially as the models scale and the system complexity increases). **Result:** Achieved an impressive 84.58% memory reduction (from 42.58 MB to 6.57 MB) through intelligent dtype optimization."
    ]
   },
   {
@@ -262,7 +262,7 @@
    "source": [
     "### 1.3 Initial Feature-Target Segregation\n",
     "\n",
-    "Separate features from target variable for preprocessing pipeline. **Key Validation:** The deduplication process preserved the original class distribution (84.71% / 15.29%), which is critical for maintaining the clinical relevance of our model and ensuring that our training data accurately represents the population diabetes prevalence with a 5.5:1 class imbalance ratio."
+    "Separate features from target variable for preprocessing pipeline. **Key Validation:** The deduplication process preserved the original class distribution (84.71% / 15.29%), which is critical for maintaining the clinical relevance of our model and ensuring that our training data accurately represents the population diabetes prevalence with a 5.5:1 class imbalance ratio. (This is important because it ensures that our model will be trained on data that reflects real-world conditions, thereby enhancing its predictive accuracy and reliability in clinical settings, IN THEORY, at least, because as our team member Sheila found out, the dataset was created through a phone survey, and as you will see in my next notebooks, this data implies some challenges that we will have to address in the modeling phase)"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "source": [
     "## Step 3: Stratified Data Splitting (Answering Q2 & Q3)\n",
     "\n",
-    "**CRITICAL: Data Split BEFORE Scaling to Prevent Data Leakage**\n",
+    "**CRITICAL: Data Split BEFORE Scaling to Prevent Data Leakage (yes, it happened to me, lol, but I fixed it thanks to Sheila's observation)**\n",
     "\n",
     "Neural networks require scaled inputs and we must preserve class balance across data splits. However, to follow machine learning best practices and prevent data leakage, we must split the data FIRST, then fit the scaler only on training data.\n",
     "\n",
