--- a/advanced/submissions/team-members/yan-cotta/week_3_model_development.ipynb
+++ b/advanced/submissions/team-members/yan-cotta/week_3_model_development.ipynb
@@ -551,7 +551,7 @@
    "source": [
     "### Architecture Rationale\n",
     "\n",
-    "**Design Philosophy:** This architecture starts with a wider layer (128 units) to capture broad patterns and progressively narrows. ReLU is chosen as a standard, non-linear activation function. Batch Normalization is included after each linear layer to stabilize and accelerate training. Dropout is used as our primary regularization technique to prevent overfitting.\n",
+    "**Design Philosophy:** This architecture starts with a wider layer (128 units) to capture broad patterns and progressively narrows. ReLU is chosen as a standard, non-linear activation function. Batch Normalization is included after each linear layer to stabilize and accelerate training. Dropout is used as our primary regularization technique to prevent overfitting. (spoiler: it will do pretty bad in the end, but we will improve it in the next weeks, its baseline after all)\n",
     "\n",
     "**Key Design Decisions:**\n",
     "\n",
@@ -1326,7 +1326,7 @@
     "**Performance Summary:**\n",
     "- **Accuracy**: 85.47% - Good overall performance\n",
     "- **Precision**: 59.88% - Moderate precision for diabetes detection\n",
-    "- **Recall**: 15.19% - **CRITICAL ISSUE**: Very low recall indicates severe class imbalance bias\n",
+    "- **Recall**: 15.19% - **CRITICAL ISSUE**: Very low recall indicates severe class imbalance bias (remember I mentioned this in the past notebook? Yeah, we'll try to address it in notebook 4)\n",
     "- **F1-Score**: 24.24% - Poor harmonic mean due to recall issues\n",
     "- **AUC-ROC**: 81.94% - Good discriminative ability\n",
     "\n",
@@ -1334,11 +1334,11 @@
     "\n",
     "1. **Severe Class Imbalance Bias**: The model correctly identifies only 15.19% of actual diabetes cases\n",
     "2. **Conservative Predictions**: High specificity (98.16%) shows the model rarely predicts diabetes\n",
-    "3. **Clinical Risk**: Missing 84.81% of diabetes cases is unacceptable for healthcare applications\n",
+    "3. **Clinical Risk**: Missing 84.81% of diabetes cases is unacceptable for healthcare applications (Like I said, it did terrible lol)\n",
     "\n",
     "### 💡 Improvement Strategies:\n",
     "\n",
-    "1. **Class Weight Balancing**: Address imbalanced dataset\n",
+    "1. **Class Weight Balancing**: Address imbalanced dataset (SMOTE?)\n",
     "2. **Threshold Optimization**: Find optimal decision threshold\n",
     "3. **Architecture Improvements**: Deeper networks, attention mechanisms\n",
     "4. **Advanced Regularization**: Different dropout patterns, L2 regularization\n",
@@ -1352,7 +1352,7 @@
    "source": [
     "# 🔬 Improved Model Architectures\n",
     "\n",
-    "Based on our baseline analysis, we'll implement several improved models to address the class imbalance and performance issues."
+    "Based on our baseline analysis, we'll implement several improved models to address the class imbalance and performance issues. (this continues in notebook 4)"
    ]
   },
   {
@@ -1908,8 +1908,8 @@
     "### Key Findings from Model Comparison:\n",
     "\n",
     "**🚨 Critical Discovery: Class Weighting vs Architecture Complexity**\n",
-    "- **Balanced FFNN**: Achieved **307% recall improvement** (15.19% → 61.90%) simply by addressing class imbalance\n",
-    "- **Deep/Wide FFNNs**: Minimal improvements despite increased complexity\n",
+    "- **Balanced FFNN**: Achieved **307% recall improvement** (15.19% → 61.90%) simply by addressing class imbalance (so I guess it was worth it to mention it in the previous notebook, huh?)\n",
+    "- **Deep/Wide FFNNs**: Minimal improvements despite increased complexity (most likely due to overfitting on minority class)\n",
     "- **Trade-off Reality**: Better recall came at cost of overall accuracy (85.47% → 78.93%)\n",
     "\n",
     "### 📊 Detailed Performance Analysis:\n",
@@ -1925,8 +1925,8 @@
     "### 🎯 Clinical Implications:\n",
     "\n",
     "**Balanced FFNN for Clinical Use:**\n",
-    "- **Pros**: Detects 61.9% of diabetes cases (vs 15.2% baseline)\n",
-    "- **Cons**: Higher false positive rate (61.68% vs 40.12% baseline)\n",
+    "- **Pros**: Detects 61.9% of diabetes cases (vs 15.2% baseline) > we are getting places now\n",
+    "- **Cons**: Higher false positive rate (61.68% vs 40.12% baseline) > more follow-up tests needed\n",
     "- **Clinical Impact**: Better for screening, may require follow-up testing\n",
     "\n",
     "**Architecture Complexity Findings:**\n",
