--- a/advanced/submissions/team-members/yan-cotta/week_4_tuning_and_explainability.ipynb
+++ b/advanced/submissions/team-members/yan-cotta/week_4_tuning_and_explainability.ipynb
@@ -944,7 +944,7 @@
    "source": [
     "## Section 3: Experiment 2 - Hyperparameter Tuning & Early Stopping\n",
     "\n",
-    "Now, we will take our champion model (either the Class-Weighted or SMOTE model, depending on the results from the previous step) and perform targeted hyperparameter tuning to optimize its performance."
+    "Now, we will take our champion model and perform targeted hyperparameter tuning to optimize its performance."
    ]
   },
   {
@@ -1860,9 +1860,9 @@
     "- Could serve as **screening tool** with human oversight\n",
     "- Framework established for **iterative improvement**\n",
     "\n",
-    "### 🎯 **Honest Recommendations**\n",
+    "### 🎯 **Next steps**\n",
     "\n",
-    "Rather than deploying these models, focus on:\n",
+    "Rather than deploying these models, I'll focus on:\n",
     "1. **Comprehensive feature engineering** with medical domain expertise\n",
     "2. **External dataset validation** \n",
     "3. **Ensemble methods** combining multiple approaches\n",
