week 2 : Feature Engineering & Preprocessing

--- a/beginner/submissions/team-members/amyn-batliwala/week1/exploratory-data-analysis.ipynb
+++ b/beginner/submissions/team-members/amyn-batliwala/week1/exploratory-data-analysis.ipynb
@@ -9,14 +9,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4ee880c3",
-   "metadata": {},
-   "source": [
-    "### Import Libraries"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "e7230658",
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8b577d4b",
    "metadata": {},
    "outputs": [
@@ -80,7 +72,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/diabetes_binary_health_indicators_BRFSS2015.csv')\n",
+    "df = pd.read_csv('../data/diabetes_binary_health_indicators_BRFSS2015.csv')\n",
     "print(df.head())"
    ]
   },
