--- a/beginner/submissions/team-members/amyn-batliwala/weeks/feature-engineering-and-processing.ipynb
+++ b/beginner/submissions/team-members/amyn-batliwala/weeks/feature-engineering-and-processing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "id": "365e5fe3",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,12 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder, OneHotEncoder, OrdinalEncoder\n",
-    "from imblearn.over_sampling import SMOTE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, classification_report\n",
+    "import mlflow"
    ]
   },
   {
@@ -39,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "id": "4be8e07e",
    "metadata": {},
    "outputs": [
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "id": "d765a5b8",
    "metadata": {},
    "outputs": [],
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "id": "5492b0ec",
    "metadata": {},
    "outputs": [
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "id": "c9c0ef11",
    "metadata": {},
    "outputs": [
@@ -149,26 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "id": "6fc1dad5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"None of [Index(['Age', 'Education', 'Income'], dtype='object')] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Nominal columns\u001b[39;00m\n\u001b[32m      2\u001b[39m nominal_cols = [\u001b[33m'\u001b[39m\u001b[33mAge\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mEducation\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mIncome\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_dummies\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnominal_cols\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\SuperDataScience\\projects\\SDS-CP035-gluco-track\\.venv\\Lib\\site-packages\\pandas\\core\\reshape\\encoding.py:170\u001b[39m, in \u001b[36mget_dummies\u001b[39m\u001b[34m(data, prefix, prefix_sep, dummy_na, columns, sparse, drop_first, dtype)\u001b[39m\n\u001b[32m    168\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mInput must be a list-like for parameter `columns`\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    169\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m170\u001b[39m     data_to_encode = \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m    172\u001b[39m \u001b[38;5;66;03m# validate prefixes and separator to avoid silently dropping cols\u001b[39;00m\n\u001b[32m    173\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcheck_len\u001b[39m(item, name: \u001b[38;5;28mstr\u001b[39m):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\SuperDataScience\\projects\\SDS-CP035-gluco-track\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[32m   4112\u001b[39m         key = \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m     indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcolumns\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[32m1\u001b[39m]\n\u001b[32m   4115\u001b[39m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[32m   4116\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[33m\"\u001b[39m\u001b[33mdtype\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) == \u001b[38;5;28mbool\u001b[39m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\SuperDataScience\\projects\\SDS-CP035-gluco-track\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6212\u001b[39m, in \u001b[36mIndex._get_indexer_strict\u001b[39m\u001b[34m(self, key, axis_name)\u001b[39m\n\u001b[32m   6209\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   6210\u001b[39m     keyarr, indexer, new_indexer = \u001b[38;5;28mself\u001b[39m._reindex_non_unique(keyarr)\n\u001b[32m-> \u001b[39m\u001b[32m6212\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   6214\u001b[39m keyarr = \u001b[38;5;28mself\u001b[39m.take(indexer)\n\u001b[32m   6215\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[32m   6216\u001b[39m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\SuperDataScience\\projects\\SDS-CP035-gluco-track\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6261\u001b[39m, in \u001b[36mIndex._raise_if_missing\u001b[39m\u001b[34m(self, key, indexer, axis_name)\u001b[39m\n\u001b[32m   6259\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m nmissing:\n\u001b[32m   6260\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nmissing == \u001b[38;5;28mlen\u001b[39m(indexer):\n\u001b[32m-> \u001b[39m\u001b[32m6261\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   6263\u001b[39m     not_found = \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask.nonzero()[\u001b[32m0\u001b[39m]].unique())\n\u001b[32m   6264\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not in index\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mKeyError\u001b[39m: \"None of [Index(['Age', 'Education', 'Income'], dtype='object')] are in the [columns]\""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Nominal columns\n",
     "nominal_cols = ['Age', 'Education', 'Income']\n",
@@ -177,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "f757fc3f",
    "metadata": {},
    "outputs": [],
@@ -206,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "id": "97cacc3a",
    "metadata": {},
    "outputs": [],
@@ -229,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "id": "8e496f00",
    "metadata": {},
    "outputs": [],
@@ -249,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "id": "a452f03e",
    "metadata": {},
    "outputs": [],
@@ -272,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
    "id": "4caea2f8",
    "metadata": {},
    "outputs": [
@@ -290,6 +279,111 @@
     "print(\"Train shape:\", X_train.shape)\n",
     "print(\"Validation shape:\", X_val.shape)\n",
     "print(\"Test shape:\", X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd69cf9",
+   "metadata": {},
+   "source": [
+    "# Week 3 : Model Development & Experimentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6a1d7d2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "3ad6df5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Logistic Regression Results:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.81      0.90      0.85     32750\n",
+      "         1.0       0.88      0.80      0.84     32750\n",
+      "\n",
+      "    accuracy                           0.85     65500\n",
+      "   macro avg       0.85      0.85      0.85     65500\n",
+      "weighted avg       0.85      0.85      0.85     65500\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[29364  3386]\n",
+      " [ 6705 26045]]\n",
+      "\n",
+      "Decision Tree Results:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.88      0.87      0.88     32750\n",
+      "         1.0       0.87      0.88      0.88     32750\n",
+      "\n",
+      "    accuracy                           0.88     65500\n",
+      "   macro avg       0.88      0.88      0.88     65500\n",
+      "weighted avg       0.88      0.88      0.88     65500\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[28581  4169]\n",
+      " [ 3809 28941]]\n",
+      "\n",
+      "Naive Bayes Results:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.79      0.64      0.71     32750\n",
+      "         1.0       0.70      0.83      0.76     32750\n",
+      "\n",
+      "    accuracy                           0.73     65500\n",
+      "   macro avg       0.74      0.73      0.73     65500\n",
+      "weighted avg       0.74      0.73      0.73     65500\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[20919 11831]\n",
+      " [ 5545 27205]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train baseline models\n",
+    "models = {\n",
+    "    \"Logistic Regression\": LogisticRegression(max_iter=1000, random_state=42),\n",
+    "    \"Decision Tree\": DecisionTreeClassifier(random_state=42),\n",
+    "    \"Naive Bayes\": GaussianNB()\n",
+    "}\n",
+    "\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    with mlflow.start_run(run_name=name):\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_val)\n",
+    "        acc = accuracy_score(y_val, y_pred)\n",
+    "        prec = precision_score(y_val, y_pred)\n",
+    "        rec = recall_score(y_val, y_pred)\n",
+    "        f1 = f1_score(y_val, y_pred)\n",
+    "        cm = confusion_matrix(y_val, y_pred)\n",
+    "        mlflow.log_metric(\"accuracy\", acc)\n",
+    "        mlflow.log_metric(\"precision\", prec)\n",
+    "        mlflow.log_metric(\"recall\", rec)\n",
+    "        mlflow.log_metric(\"f1_score\", f1)\n",
+    "        results[name] = {\n",
+    "            \"accuracy\": acc,\n",
+    "            \"precision\": prec,\n",
+    "            \"recall\": rec,\n",
+    "            \"f1_score\": f1,\n",
+    "            \"confusion_matrix\": cm\n",
+    "        }\n",
+    "        print(f\"\\n{name} Results:\")\n",
+    "        print(classification_report(y_val, y_pred))\n",
+    "        print(\"Confusion Matrix:\\n\", cm)"
    ]
   }
  ],
