Update noora-CP035.ipynb with latest analysis and modeling code

--- a/beginner/submissions/team-members/NooraAlakulppi/noora-CP035.ipynb
+++ b/beginner/submissions/team-members/NooraAlakulppi/noora-CP035.ipynb
@@ -9988,8 +9988,135 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94862534",
+   "id": "1a9b31ff",
    "metadata": {},
+   "source": [
+    "**Model's Max and Min probabilities of Diabetes:**\n",
+    "\n",
+    "1. Import the trained model from the notebook using joblib.\n",
+    "2. Get the feature names in the same order as training.\n",
+    "3. For each feature, determine its minimum and maximum value from the training data.\n",
+    "4. Construct two synthetic profiles:\n",
+    "   - One with all features at their minimum values (lowest risk profile).\n",
+    "   - One with all features at their maximum values (highest risk profile).\n",
+    "5. Use the model's `predict_proba` method to get the probability of diabetes for both profiles.\n",
+    "6. Print the lowest and highest probabilities and the corresponding feature profiles.\n",
+    "7. Write tests to assert that probabilities are between 0 and 1, and that the profiles are valid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cf37603f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lowest theoretical diabetes probability: 0.1134\n",
+      "Feature profile for lowest risk:\n",
+      "                         0\n",
+      "HighBP                 0.0\n",
+      "HighChol               0.0\n",
+      "CholCheck              0.0\n",
+      "BMI                   12.0\n",
+      "Smoker                 0.0\n",
+      "Stroke                 0.0\n",
+      "HeartDiseaseorAttack   0.0\n",
+      "PhysActivity           0.0\n",
+      "Fruits                 0.0\n",
+      "Veggies                0.0\n",
+      "HvyAlcoholConsump      0.0\n",
+      "AnyHealthcare          0.0\n",
+      "NoDocbcCost            0.0\n",
+      "GenHlth                1.0\n",
+      "MentHlth               0.0\n",
+      "PhysHlth               0.0\n",
+      "DiffWalk               0.0\n",
+      "Sex                    0.0\n",
+      "Age                    1.0\n",
+      "Education              1.0\n",
+      "Income                 1.0\n",
+      "\n",
+      "Highest theoretical diabetes probability: 0.7181\n",
+      "Feature profile for highest risk:\n",
+      "                         0\n",
+      "HighBP                 1.0\n",
+      "HighChol               1.0\n",
+      "CholCheck              1.0\n",
+      "BMI                   98.0\n",
+      "Smoker                 1.0\n",
+      "Stroke                 1.0\n",
+      "HeartDiseaseorAttack   1.0\n",
+      "PhysActivity           1.0\n",
+      "Fruits                 1.0\n",
+      "Veggies                1.0\n",
+      "HvyAlcoholConsump      1.0\n",
+      "AnyHealthcare          1.0\n",
+      "NoDocbcCost            1.0\n",
+      "GenHlth                5.0\n",
+      "MentHlth              30.0\n",
+      "PhysHlth              30.0\n",
+      "DiffWalk               1.0\n",
+      "Sex                    1.0\n",
+      "Age                   13.0\n",
+      "Education              6.0\n",
+      "Income                 8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Model's theoretical min/max diabetes probabilities and feature profiles ---\n",
+    "\n",
+    "import joblib\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Load trained model\n",
+    "rf_classifier = joblib.load(\"rf_classifier.joblib\")\n",
+    "\n",
+    "# 2. Feature names (must match training order)\n",
+    "features = [\n",
+    "    'HighBP', 'HighChol', 'CholCheck', 'BMI', 'Smoker', 'Stroke',\n",
+    "    'HeartDiseaseorAttack', 'PhysActivity', 'Fruits', 'Veggies', 'HvyAlcoholConsump',\n",
+    "    'AnyHealthcare', 'NoDocbcCost', 'GenHlth', 'MentHlth', 'PhysHlth', 'DiffWalk',\n",
+    "    'Sex', 'Age', 'Education', 'Income'\n",
+    "]\n",
+    "\n",
+    "# 3. Get min/max for each feature from the training data\n",
+    "df = pd.read_csv(\"diabetes_binary_5050split_health_indicators_BRFSS2015.csv\")\n",
+    "min_profile = [df[f].min() for f in features]\n",
+    "max_profile = [df[f].max() for f in features]\n",
+    "\n",
+    "# 4. Construct DataFrames for min/max profiles\n",
+    "X_min = pd.DataFrame([min_profile], columns=features)\n",
+    "X_max = pd.DataFrame([max_profile], columns=features)\n",
+    "\n",
+    "# 5. Predict probabilities\n",
+    "min_prob = rf_classifier.predict_proba(X_min)[0, 1]\n",
+    "max_prob = rf_classifier.predict_proba(X_max)[0, 1]\n",
+    "\n",
+    "# 6. Print results\n",
+    "print(\"Lowest theoretical diabetes probability:\", round(min_prob, 4))\n",
+    "print(\"Feature profile for lowest risk:\")\n",
+    "print(X_min.T)\n",
+    "\n",
+    "print(\"\\nHighest theoretical diabetes probability:\", round(max_prob, 4))\n",
+    "print(\"Feature profile for highest risk:\")\n",
+    "print(X_max.T)\n",
+    "\n",
+    "# 7. Simple tests\n",
+    "assert 0 <= min_prob <= 1, \"Min probability out of bounds\"\n",
+    "assert 0 <= max_prob <= 1, \"Max probability out of bounds\"\n",
+    "assert all([f in X_min.columns for f in features]), \"Feature names mismatch\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2524e6",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
